--- a/.github/workflows/deploy-to-heroku-frontend.yml
+++ b/.github/workflows/deploy-to-heroku-frontend.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - run: npm install
-      - run: npm run build
+      - run: cd ./front && npm install
+      - run: cd ./front && npm run build
       - name: Deploy to Heroku Frontend
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
