--- a/.github/workflows/deploy-to-heroku-frontend.yml
+++ b/.github/workflows/deploy-to-heroku-frontend.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy to Heroku Frontend
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          args: deploy --dir=build --prod
+          args: deploy --dir=./front/build --prod
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_FRONT}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
